--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "art-template": "^3.0.3",
     "express": "^4.14.0",
-    "node-crawler" : "^0.4.3"
+    "node-crawler" : "^0.4.3",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1"
   }
 }
